--- a/app/modules/directory/directory.html
+++ b/app/modules/directory/directory.html
@@ -23,7 +23,8 @@
     <fa-modifier fa-size="[undefined, 240]">
       <fa-grid-layout fa-options="{dimensions:[2,1]}">
         <fa-surface fa-pipe-to="resultsEventHandler" fa-background-color="'#fff'" class="txt-center directoryStoreSurface" ng-repeat="store in storeGroup" fa-click="handleStoreClick(store)">
-          <img ng-src="{{store._links.logo.href}}" height="200px"/>
+          <img ng-if="store._links.logo.href" ng-src="{{store._links.logo.href}}" height="200px"/>
+          <p class="directory-no-logo-text" ng-if="!store._links.logo.href" >{{store.name}}</p>
         </fa-surface>
       </fa-grid-layout>
     </fa-modifier>
