new search styles

--- a/app/modules/largescreen/largescreen.html
+++ b/app/modules/largescreen/largescreen.html
@@ -87,7 +87,7 @@
             fa-translate="menu.stores.data.grid.translate">
             <fa-grid-layout 
               fa-options="menu.stores.data.grid.options">
-              <fa-surface class="large-menu-store-grid"
+              <fa-surface class="large-menu-stores-grid"
                 ng-repeat="grid in menu.stores.data.grid.grids">
                 <ul>
                   <li ng-repeat="store in grid" 
@@ -272,7 +272,7 @@
           </fa-modifier>
 
           <!-- Search -->
-          <largescreen-sidebar-search></largescreen-sidebar-search>
+          <largescreen-search></largescreen-search>
         
         </fa-modifier>
 
