--- a/app/modules/directory/directory.html
+++ b/app/modules/directory/directory.html
@@ -1,43 +1,59 @@
-<fa-header-footer-layout fa-options="{direction: 0, headerSize: 680, footerSize: 160}">
+<fa-header-footer-layout 
+  fa-options="{direction: 0, headerSize: 680, footerSize: 160}">
 
   <!-- Category Filters -->
   <fa-scroll-view fa-pipe-from="categoriesEventHandler">
     <fa-view ng-repeat="category in categories">
       <fa-modifier fa-size="[undefined, 80]">
         <!-- All events on fa-surfaces (click, mousewheel) are piped to $scope.myEventHandler -->
-         <fa-surface
-                     fa-click="categoryClickHandler(category)"
-                     fa-pipe-to="categoriesEventHandler"
-                     class="directoryCategory"
-                     ng-class="{'active': (filterCategory == category.code)}">
-            <h3>{{category.name}}</h3>
-         </fa-surface>
+        <fa-surface
+          fa-click="categoryClickHandler(category)"
+          fa-pipe-to="categoriesEventHandler"
+          class="directoryCategory"
+          ng-class="{'active': (filterCategory == category.code)}">
+          <h3>{{category.name}}</h3>
+        </fa-surface>
       </fa-modifier>
     </fa-view>
   </fa-scroll-view>
 
   <!-- Results -->
-  <fa-scroll-view fa-pipe-from="resultsEventHandler">
-    <!-- Put stores in a 2 by 1 grid in each listing -->
-    <fa-view ng-repeat="storeGroup in storesList">
-    <fa-modifier fa-size="[undefined, 240]">
-      <fa-grid-layout fa-options="{dimensions:[2,1]}">
-        <fa-surface fa-pipe-to="resultsEventHandler" fa-background-color="'#fff'" class="txt-center directoryStoreSurface" ng-repeat="store in storeGroup" fa-click="handleStoreClick(store)">
-          <img ng-if="store._links.logo.href" ng-src="{{store._links.logo.href}}" height="200px"/>
-          <p class="directory-no-logo-text" ng-if="!store._links.logo.href" >{{store.name}}</p>
-        </fa-surface>
-      </fa-grid-layout>
+  <fa-view>
+
+    <!-- Background -->
+    <fa-modifier>
+      <fa-surface class="directoryResultsBackground" fa-background-color="'#fff'"></fa-surface>
     </fa-modifier>
-    </fa-view>
-  </fa-scroll-view>
+
+    <!-- Content -->
+    <fa-scroll-view 
+      fa-pipe-from="resultsEventHandler">
+      <!-- Put stores in a 2 by 1 grid in each listing -->
+      <fa-view ng-repeat="storeGroup in storesList">
+        <fa-modifier 
+          fa-size="[undefined, 240]">
+          <fa-grid-layout 
+            fa-options="{dimensions:[2,1]}">
+            <fa-surface class="txt-center directoryStoreSurface"
+              fa-pipe-to="resultsEventHandler" 
+              ng-repeat="store in storeGroup" 
+              fa-click="handleStoreClick(store)">
+              <img ng-if="store._links.logo.href" ng-src="{{store._links.logo.href}}" height="200px"/>
+              <p class="directory-no-logo-text" ng-if="!store._links.logo.href" >{{store.name}}</p>
+            </fa-surface>
+          </fa-grid-layout>
+        </fa-modifier>
+      </fa-view>
+    </fa-scroll-view>
+
+  </fa-view>
 
   <!-- Headings -->
   <fa-view>
     <fa-modifier
       fa-translate="[10,-160,0]"
       fa-rotate-z="headerRotation"
-      fa-size="[1200, 200]"
-      >
+      fa-size="[1200, 200]">
       <fa-surface>
         <h1 class="bigLightText">{{directoryTitle}}</h1>
       </fa-surface>
