--- a/app/public/index.html
+++ b/app/public/index.html
@@ -40,7 +40,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
         <kioskmenu></kioskmenu>
         <card-stream></card-stream>
       </fa-modifier>
-      <kiosk-screensaver ng-if="globalConfig.isLargescreen"></kiosk-screensaver>
+      <kiosk-screensaver ng-if="globalConfig.screensaver"></kiosk-screensaver>
     </fa-app>
   </body>
   <script src="/assets/app.js"></script>
