now using forecast.io via node server

--- a/app/modules/largescreen-weather/largescreen-weather.html
+++ b/app/modules/largescreen-weather/largescreen-weather.html
@@ -2,6 +2,6 @@
 	<fa-surface class="largescreen-weather">
 		<h1 current-time="format"></h1>
 		<h2>{{weather.summary}}</h2>
-		<h3>{{weather.currentTemp}}&deg;</h3>
+		<h3>{{weather.currentTemp}}&deg;F</h3>
 	</fa-surface>
 </fa-modifier>
