Unit and E2E testing implementation
- Add Karma unit testing,
- Re-scope Protractor as E2E
- Trivial tests for both
- Updated Readme
- Ensure jshint is happy with test code

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="wfWayfinding">
   <head>
-    <title>Wayfinding Prototype</title>
+    <title>Westfield Wayfinding</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/components/flama-webfont/flama.css?v=1">
