set up initial screen states

--- a/app/modules/screen/tall/tall.screen.html
+++ b/app/modules/screen/tall/tall.screen.html
@@ -1,8 +1,4 @@
-<fa-modifier>
-	<fa-surface>
-		<p ng-bind="hello"></p>
-	</fa-surface>
-</fa-modifier>
+<div ui-view></div>
 
 <!-- <fa-modifier 
 	fa-translate="masterPosition.get()" 
