--- a/app/public/index.html
+++ b/app/public/index.html
@@ -22,7 +22,7 @@
     <script src="/components/new-relic.js"></script>
     <script src="/assets/app.js"></script>
   </head>
-  <body ng-controller="ScreenMasterCtrl">
+  <body ng-controller="ScreenCtrl">
     <fa-app fa-perspective="250">
       <tallscreen ng-if="screen.size === 'tall'"></tallscreen>
       <widescreen ng-if="screen.size === 'wide'"></widescreen>
