--- a/app/modules/preloader/loading.html
+++ b/app/modules/preloader/loading.html
@@ -1,14 +1,26 @@
 <fa-view>
-  <fa-modifier fa-origin="[.5, .5]" fa-align="[0.5, 0.5]" fa-rotate-y="rotateY.get()">
+  <fa-modifier 
+    fa-origin="[.5, .5]" 
+    fa-align="[0.5, 0.5]" 
+    fa-rotate-y="rotateY.get()">
+
     <!-- Front face -->
-    <fa-surface fa-size="[true, true]" fa-color="'rgb(255,255,250)'">
-      <img class="logo" src="/w.png" style="width: 150px; height: 150px;"/>
+    <fa-surface 
+      fa-size="[true, true]" 
+      fa-color="'rgb(255,255,250)'">
+      <img class="logo" src="/w.png" style="width: 150px; height: 150px;" />
     </fa-surface>
+
     <!-- Back face:  same image, rotated pi radians -->
-    <fa-modifier fa-rotate-y="3.14159">
-      <fa-surface fa-size="[true, true]" fa-color="'rgb(255,255,250)'">
+    <fa-modifier 
+      fa-rotate-y="3.14159">
+      
+      <fa-surface 
+        fa-size="[true, true]" 
+        fa-color="'rgb(255,255,250)'">
         <img class="logo" src="/w.png" style="width: 150px; height: 150px;" />
       </fa-surface>
+      
     </fa-modifier>
   </fa-modifier>
 </fa-view>
