added weather component

--- a/app/core/ui/screen/tall/tall.screen.html
+++ b/app/core/ui/screen/tall/tall.screen.html
@@ -10,7 +10,7 @@
 
     <!-- Header -->
     <fa-view>
-    	<!-- <weather></weather> -->
+    	<weather></weather>
     </fa-view>
 
     <!-- Content -->
