initial fade in for widescreen

--- a/app/core/ui/screen/tall/tall.screen.html
+++ b/app/core/ui/screen/tall/tall.screen.html
@@ -2,7 +2,8 @@
 
 	<!-- Background Image -->
 	<fa-modifier fa-opacity="opacity.get()">
-		<fa-image-surface fa-image-url="bigBG.jpg"></fa-image-surface>
+		<fa-image-surface class="tallscreen-bg-image"
+      fa-image-url="bigBG.jpg"></fa-image-surface>
 	</fa-modifier>
 
   <!-- Layout -->
