--- a/app/core/ui/states/wide/map/view.html
+++ b/app/core/ui/states/wide/map/view.html
@@ -1,5 +1,9 @@
 <fa-view>
-  <fa-modifier>
-    <fa-surface></fa-surface>
+
+  <fa-modifier fa-opacity="opacity.get()">
+    <fa-surface fa-background-color="'white'">
+    	<h1 ng-bind="title"></h1>
+    </fa-surface>
   </fa-modifier>
+
 </fa-view>
