set up theme typography

--- a/app/core/ui/screen/tall/tall.screen.html
+++ b/app/core/ui/screen/tall/tall.screen.html
@@ -12,9 +12,9 @@
     <!-- Header -->
     <fa-view>
 
-      <!-- Time -->
+      <!-- Current Time -->
       <fa-modifier fa-opacity="opacity.get()">
-        <time></time>
+        <current-time></current-time>
       </fa-modifier>
 
       <!-- Weather -->
