added store service to api

--- a/app/core/ui/screen/tall/tall.screen.html
+++ b/app/core/ui/screen/tall/tall.screen.html
@@ -34,7 +34,7 @@
         fa-origin="content.background.origin"
         fa-size="content.background.size">
         
-        <fa-surface class="tallscreen-bg"
+        <fa-surface class="tall-bg"
           fa-background-color="content.background.color">
         </fa-surface>
         
