--- a/app/core/ui/states/wide/map/view.html
+++ b/app/core/ui/states/wide/map/view.html
@@ -1,9 +1,8 @@
 <fa-view>
 
+  <!-- Map -->
   <fa-modifier fa-opacity="opacity.get()">
-    <fa-surface fa-background-color="'white'">
-    	<h1 ng-bind="title"></h1>
-    </fa-surface>
+    <jmap></jmap>
   </fa-modifier>
 
 </fa-view>
