--- a/app/core/ui/screen/tall/states/stores/view.html
+++ b/app/core/ui/screen/tall/states/stores/view.html
@@ -1,10 +1,45 @@
 <fa-view>
-	<fa-modifier>
+	<fa-modifier
+		fa-opacity="opacity.get()"
+		fa-size="state.size"
+		fa-translate="state.translate">
 
-	  <fa-surface>
-	  {{title}}
-	  xxxxxxxx
-	  </fa-surface>
+	  <!-- Title -->
+	  <fa-modifier
+	  	fa-size="title.size">
+	    <fa-surface class="tall-stores-title">
+	    	{{title.text}}
+	    </fa-surface>
+	  </fa-modifier>
+
+	  <!-- Floor Selector -->
+	  <fa-modifier
+      fa-size="floorSelector.size"
+      fa-translate="floorSelector.translate">
+      <fa-surface class="tall-categories-floor-selector">
+      	<floor-selector></floor-selector>
+      </fa-surface>
+    </fa-modifier>
+
+	  <!-- Stores List -->
+	  <fa-modifier
+	  	fa-size="grid.size"
+	  	fa-translate="grid.translate">
+	    <fa-grid-layout
+        fa-options="grid.options">
+        <fa-surface class="tall-stores-list"
+          ng-repeat="column in grid.columns">
+          <ul>
+            <li ng-repeat="store in column">
+              <a ng-click="service.selectStore(store)">
+	              <!-- <div class="floor-indicator" ng-if="(store.level == activeFloor)"></div> -->
+	              {{store.name}}
+              </a>
+            </li>
+          </ul>
+        </fa-surface>
+      </fa-grid-layout>
+	  </fa-modifier>
 
 	</fa-modifier>
 </fa-view>
