--- a/app/core/ui/screen/tall/states/stores/view.html
+++ b/app/core/ui/screen/tall/states/stores/view.html
@@ -13,13 +13,13 @@
 	  </fa-modifier>
 
 	  <!-- Floor Selector -->
-	  <fa-modifier
+	  <!-- <fa-modifier
       fa-size="floorSelector.size"
       fa-translate="floorSelector.translate">
       <fa-surface class="tall-categories-floor-selector">
       	<floor-selector></floor-selector>
       </fa-surface>
-    </fa-modifier>
+    </fa-modifier> -->
 
 	  <!-- Stores List -->
 	  <fa-modifier
