--- a/app/core/ui/screen/wide/states/map/view.html
+++ b/app/core/ui/screen/wide/states/map/view.html
@@ -1,8 +1,18 @@
 <fa-view>
+	<fa-modifier
+		fa-opacity="opacity.get()">
 
-  <!-- Map -->
-  <fa-modifier fa-opacity="opacity.get()">
-    <jmap></jmap>
-  </fa-modifier>
+		<!-- Testing... -->
+		<fa-modifier>
+			<fa-surface>
+				<h1 style="color: white;">Map</h1>
+			</fa-surface>
+		</fa-modifier>
 
+	  <!-- Map -->
+	  <fa-modifier>
+	    <jmap></jmap>
+	  </fa-modifier>
+
+	</fa-modifier>
 </fa-view>
