--- a/app/core/ui/screen/wide/states/shopping/view.html
+++ b/app/core/ui/screen/wide/states/shopping/view.html
@@ -1,5 +1,13 @@
 <fa-view>
-  <fa-modifier>
-    <fa-surface></fa-surface>
-  </fa-modifier>
+	<fa-modifier
+		fa-opacity="opacity.get()">
+
+		<!-- Testing... -->
+		<fa-modifier>
+			<fa-surface>
+				<h1 style="color: white;">{{title}}</h1>
+			</fa-surface>
+		</fa-modifier>
+
+	</fa-modifier>
 </fa-view>
