--- a/app/core/ui/elements/floor-selector/floor-selector.html
+++ b/app/core/ui/elements/floor-selector/floor-selector.html
@@ -1,17 +1,35 @@
-<!-- Summary -->
 <fa-modifier
-	fa-size="weather.summary.size"
-	fa-translate="weather.summary.translate">
-	<fa-surface class="weather-summary" ng-class="class">
-		{{summary}}
-	</fa-surface>
-</fa-modifier>
+	fa-size="floorSelector.size"
+	fa-translate="floorSelector.translate">
 
-<!-- Current Temperature -->
-<fa-modifier
-	fa-size="weather.currentTemp.size"
-	fa-translate="weather.currentTemp.translate">
-	<fa-surface class="weather-current-temp" ng-class="class">
-		{{currentTemp}}&deg;F
-	</fa-surface>
+	<!-- Header -->
+	<fa-modifier
+    fa-size="floorSelector.header.size"
+    fa-translate="floorSelector.header.translate">
+		<fa-surface class="floor-selector-header" ng-class="class">
+			{{floorSelector.header.text}}
+		</fa-surface>
+	</fa-modifier>
+
+	<!-- Floors -->
+	<fa-modifier
+    fa-size="floorSelector.grid.size"
+    fa-translate="floorSelector.grid.translate">
+		<fa-grid-layout
+	    fa-options="floorSelector.grid.options">
+
+	    <fa-surface class="floor-selector-floors" ng-class="class"
+	      ng-repeat="grid in floorSelector.grid.columns">
+	      <div
+	        ng-repeat="floor in grid"
+	        ng-class="{active:(activeFloor == floor.level)}"
+	        ng-click="floorSelector.click(floor)">
+	        <p>Floor</p>
+	        <h1>{{floor.level}}</h1>
+	      </div>
+	    </fa-surface>
+
+	  </fa-grid-layout>
+  </fa-modifier>
+
 </fa-modifier>
