--- a/app/core/ui/screen/tall/states/stores/view.html
+++ b/app/core/ui/screen/tall/states/stores/view.html
@@ -17,18 +17,16 @@
 
 	  <!-- Stores List -->
 	  <fa-modifier
-	  	fa-size="grid.size"
-	  	fa-translate="grid.translate">
+	  	fa-size="stores.size"
+	  	fa-translate="stores.translate">
 	    <fa-grid-layout
-        fa-options="grid.options">
+        fa-options="stores.options">
         <fa-surface class="tall-stores-list"
-          ng-repeat="column in grid.columns">
+          ng-repeat="column in stores.columns">
           <ul>
-            <li ng-repeat="store in column">
-              <a ng-click="service.selectStore(store)">
-	              <div class="floor-indicator" ng-if="(store.level == activeFloor)"></div>
-	              {{store.name}}
-              </a>
+            <li ng-repeat="store in column" ng-click="selectStore(store)">
+              <div class="floor-indicator" ng-if="(store.level == activeFloor)"></div>
+              {{store.name}}
             </li>
           </ul>
         </fa-surface>
