removed Screen.extend()

--- a/app/core/ui/screen/tall/tall.screen.html
+++ b/app/core/ui/screen/tall/tall.screen.html
@@ -46,6 +46,11 @@
         </fa-surface>
       </fa-modifier>
 
+<!-- This code is a video test for gerard -->
+<!--       <fa-surface>
+      <video controls style="z-index: 500;top: 1000px;"><source src="http://www.totaleclips.com/Player/Bounce.aspx?eclipid=e137362&amp;bitrateid=449&amp;vendorid=2397&amp;type=.mp4"></video>
+      </fa-surface> -->
+
       <!-- States -->
       <div ui-view></div>
       <div ui-view="categories" ng-if="states.categories.active"></div>
