--- a/app/core/ui/screen/tall/states/search/view.html
+++ b/app/core/ui/screen/tall/states/search/view.html
@@ -7,6 +7,23 @@
     <!-- Search -->
     <search></search>
 
+	  <!-- Stores List -->
+	  <fa-modifier
+	  	fa-size="stores.size"
+	  	fa-translate="stores.translate">
+	    <fa-grid-layout
+		    fa-options="stores.options">
+		    <fa-surface class="tall-stores-list"
+		      ng-repeat="column in stores.columns">
+		      <ul>
+		        <li ng-repeat="store in column" ng-click="selectStore(store)">
+		          {{store.name}}
+		        </li>
+		      </ul>
+		    </fa-surface>
+		  </fa-grid-layout>
+	  </fa-modifier>
+
     <!-- Keyboard -->
     <keyboard></keyboard>
 
