--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     
-    <link rel="stylesheet" href="/components/flama-webfont/flama.css?v=1">
+    <!-- <link rel="stylesheet" href="/components/flama-webfont/flama.css?v=1">
     <link rel="stylesheet" href="/components/flama-condensed-webfont/flama-condensed.css?v=1">
     <link rel="stylesheet" href="/assets/application.css?v=1">
-    <link rel="stylesheet" href="/components/famous-angular/dist/famous-angular.css">
+    <link rel="stylesheet" href="/components/famous-angular/dist/famous-angular.css"> -->
     
     <script src="/components/jquery/dist/jquery.min.js"></script>
     <script src="/components/d3/d3.min.js"></script>
@@ -24,8 +24,6 @@
     <script src="/assets/app.js"></script>
   </head>
   <body>
-    <fa-app fa-perspective="250">
-      <tallscreen></tallscreen>
-    </fa-app>
+    <div ui-view></div>
   </body>
 </html>
